# smithpy

./: .gitignore  README.md  pyproject.toml  setup.cfg  smith_gui.py
src/smithpy/: __init__.py  __main__.py  app.py  dialogs.py  parsing.py
